--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>App phone service</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0./css/font-awesome.min.css">
@@ -18,6 +19,23 @@
 
   <body>
 
+    <section id="banner" class="bg-primary">
+      <div class="container">
+        <div class="row max-viewport align-items-center text-center">
+          <div class="col-md-6 my-5 order-2 order-md-1">
+            <img src="images/banner.jpg" class="img-fluid">
+          </div>
+          <div class="col-md-6 my-5 order-1 order-md-2">
+            <h1 class="text-danger text-uppercase">
+              <small class="text-danger">phone emergency </small>App
+            </h1>
+            <p class="lead white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-smile mr-2"></i>Mobile Phone</a>
+            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-poo mr-2"></i>Office Phone</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
