Create first filler section

--- a/index.html
+++ b/index.html
@@ -29,12 +29,26 @@
             <h1 class="text-danger text-uppercase">
               <small class="text-danger">phone emergency </small>App
             </h1>
-            <p class="lead white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-smile mr-2"></i>Mobile Phone</a>
-            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-poo mr-2"></i>Office Phone</a>
+            <p class="lead text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-smile mr-2"></i> Mobile Phone</a>
+            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-poo mr-2"></i> Office Phone</a>
           </div>
         </div>
       </div>
+    </section>
+
+    <section id="first-filler" class="download">
+      <div class="container">
+        <div class="row align-items-center viewport-50 text-center">
+          <div class="col-sm-6">
+            <a href="#" class="btn btn-dark text-uppercase m-2"><i class="fas fa-smile mr-2"> Mobile Phone</i></a>
+            <a href="#" class="btn btn-dark text-uppercase m-2"><i class="fas fa-smile mr-2"> Office Phone</i></a>     
+          </div>
+          <div class="col-sm-6">
+            <p class="lead text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+          </div> 
+        </div>
+      </div>      
     </section>
 
 
