--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
               <small class="text-danger">phone emergency </small>App
             </h1>
             <p class="lead text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-smile mr-2"></i> Mobile Phone</a>
-            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-poo mr-2"></i> Office Phone</a>
+            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-smile fa-3x mr-2"></i> Mobile Phone</a>
+            <a href="#" class="btn btn-outline-dark text-uppercase m-2"><i class="fas fa-poo fa-3x mr-2"></i> Office Phone</a>
           </div>
         </div>
       </div>
     </section>
 
     <section id="first-filler" class="download">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row align-items-center viewport-50 text-center">
           <div class="col-sm-6">
-            <a href="#" class="btn btn-dark text-uppercase m-2"><i class="fas fa-smile mr-2"> Mobile Phone</i></a>
-            <a href="#" class="btn btn-dark text-uppercase m-2"><i class="fas fa-smile mr-2"> Office Phone</i></a>     
+            <a href="#" class="btn btn-dark text-uppercase m-2"><i class="fas fa-smile fa-2x mr-2"> Mobile Phone</i></a>
+            <a href="#" class="btn btn-dark text-uppercase m-2"><i class="fas fa-poo fa-2x mr-2"> Office Phone</i></a>     
           </div>
           <div class="col-sm-6">
             <p class="lead text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
@@ -51,6 +51,33 @@
       </div>      
     </section>
 
+    <section id="features" class="py-5 bg-primary">
+      <div class="container-fluid">
+        <div class="row align-items-center text-center">
+          <div class="col-md-6 col-lg-6 text-white my-3 d-flex">
+            <i class="fa fa-bomb fa-5x mr-3"></i>
+            <div class="inner-text">
+              <h1 class="my-3">News</h1>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>            
+          </div>
+          <div class="col-md-6 col-lg-6 text-white my-3 d-flex">
+            <i class="fa fa-handshake fa-5x mr-3"></i>
+            <div class="inner-text">
+              <h1 class="my-3">Partnership</h1>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>            
+          </div>
+            <div class="col-md-6 col-lg-6 text-white my-3 d-flex">
+            <i class="fa fa-user fa-5x mr-3"></i>
+            <div class="inner-text">
+              <h1 class="my-3">User</h1>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>            
+          </div>
+        </div>
+      </div>     
+    </section>
 
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
