--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
       </div>     
     </section>
 
+    <section id="second-filler" class="download">
+      <div class="container-fluid">
+        <div class="row align-items-center viewport-50 text-center">
+          <div class="col-sm-6">
+            <p class="lead text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>        
+          </div>
+          <div class="col-sm-6">
+            <a href="#" class="btn btn-lg btn-dark text-uppercase m-2">Download Now</a>  
+          </div>         
+        </div>
+      </div>
+    </section>
+
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
