--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
       </div>      
     </section>
 
+    <section id="about" class="bg-primary py-5">
+      <div class="container-fluid">
+        <div class="row align-items-center text-center">
+          <div class="col-12 col-md-6 order-1 order-md-1">
+            <img src="images/about1.jpg" class="img-fluid rounded">
+          </div>
+          <div class="col-12 col-md-6 order-2 order-md-2">
+            <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
